# tonic

./: Cargo.toml  LICENSE  release-plz.toml
.gemini/: config.yaml
.github/workflows/: CI.yml  release-protoc-gen-rust-grpc.yml
codegen/: Cargo.toml
codegen/src/: main.rs
examples/: Cargo.toml  README.md  build.rs
examples/src/authentication/: client.rs  server.rs
examples/src/autoreload/: server.rs
examples/src/blocking/: client.rs  server.rs
examples/src/cancellation/: client.rs  server.rs
examples/src/codec_buffers/: client.rs  common.rs  server.rs
examples/src/compression/: client.rs  server.rs
examples/src/dynamic/: server.rs
examples/src/dynamic_load_balance/: client.rs  server.rs
examples/src/gcp/: client.rs
examples/src/grpc-gcp/: client.rs
examples/src/grpc-helloworld/: client.rs
examples/src/grpc-routeguide/: client.rs
examples/src/grpc-web/: client.rs  server.rs
examples/src/h2c/: client.rs  server.rs
examples/src/health/: server.rs
examples/src/helloworld/: client.rs  server.rs
examples/src/interceptor/: client.rs  server.rs
examples/src/json-codec/: client.rs  common.rs  server.rs
examples/src/load_balance/: client.rs
examples/src/mock/: mock.rs
examples/src/multiplex/: client.rs  server.rs
grpc/: Cargo.toml  README.md
grpc-benchmark/: Cargo.toml  README.md  build.rs
grpc-benchmark/data/tls/: README.md
grpc-benchmark/proto/: README.md
grpc-benchmark/proto/grpc/testing/: benchmark_service.proto
grpc-benchmark/src/: lib.rs  main.rs  rusage.rs  server.rs  worker.rs
grpc-google/: Cargo.toml
grpc-protobuf/: Cargo.toml  README.md  build.rs
grpc-protobuf-build/: Cargo.toml  README.md
grpc-protobuf-build/src/: lib.rs
grpc-protobuf/src/: lib.rs  status.rs  trailers_conv.rs
grpc-xds/: Cargo.toml  build.rs
grpc-xds/src/: lib.rs
grpc/benches/: metadata.rs
grpc/src/: lib.rs  status.rs
grpc/src/client/: mod.rs  (+4 more)
interop/: Cargo.toml  build.rs  test.sh
interop/src/: client.rs  client_prost.rs  client_protobuf.rs  lib.rs  server_prost.rs  server_protobuf.rs
protoc-gen-rust-grpc/: Cargo.toml  README.md  build.rs
protoc-gen-rust-grpc/src/: lib.rs
tests/compile/: build.rs
tests/compression/: Cargo.toml  build.rs
tests/default_stubs/: build.rs
tests/disable_comments/: build.rs
tests/integration_tests/: Cargo.toml  build.rs
tests/web/: build.rs
tests/wellknown/: Cargo.toml  build.rs
tests/wellknown-compiled/: Cargo.toml  build.rs
tests/wellknown-compiled/src/: lib.rs
tonic/: Cargo.toml
tonic-build/: Cargo.toml
tonic-build/src/: client.rs  code_gen.rs  lib.rs  manual.rs  server.rs
tonic-health/proto/: health.proto
tonic-health/src/: lib.rs  server.rs
tonic-prost/: Cargo.toml
tonic-prost-build/: Cargo.toml
tonic-prost-build/src/: lib.rs  tests.rs
tonic-prost/src/: codec.rs  lib.rs
tonic-protobuf/: Cargo.toml
tonic-reflection/proto/: reflection_v1.proto
tonic-reflection/src/: lib.rs
tonic-reflection/tests/: server.rs  versions.rs
tonic-types/: Cargo.toml
tonic-types/src/: lib.rs
tonic-web/src/: call.rs  client.rs  layer.rs  lib.rs  service.rs
tonic-xds/: Cargo.toml
tonic-xds/examples/: channel.rs  channel_with_google_default.rs  gen_test_proto.rs  greeter_server.rs  xds_server.rs
tonic-xds/src/: lib.rs
tonic/benches/: decode.rs
tonic/benches-disabled/: bench_main.rs
tonic/src/: body.rs  codegen.rs  extensions.rs  lib.rs  macros.rs  request.rs  response.rs  status.rs  util.rs
xds-client/: Cargo.toml
xds-client-opentelemetry/: Cargo.toml
xds-client-opentelemetry/src/: lib.rs
xds-client/examples/: basic.rs
xds-client/src/: error.rs  lib.rs  message.rs  metrics.rs
(+243 files in other folders)
