[package]
name = "grpc-benchmark"
edition = "2024"
authors = ["gRPC Authors"]
license = "MIT"
rust-version = { workspace = true }

[dependencies]
grpc = { path = "../grpc" }
grpc-protobuf = { path = "../grpc-protobuf" }
prost = "0.14"
prost-types = "0.14"
protobuf = { version = "4.35.1-release" }
tonic = { path = "../tonic" }
tonic-prost = { path = "../tonic-prost" }

[build-dependencies]
tonic-prost-build = { path = "../tonic-prost-build" }
grpc-protobuf-build = { path = "../grpc-protobuf-build" }
