[package]
authors = ["gRPC authors"]
edition = "2021"
license = "MIT"
name = "wellknown-compiled"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
prost = "0.14"
tonic = {path = "../../tonic"}
tonic-prost = {path = "../../tonic-prost"}

[build-dependencies]
tonic-prost-build = {path = "../../tonic-prost-build"}
